crates/nuff_python_parser/src/parser/snapshots/nuff_python_parser__parser__tests__expr_mode_valid_syntax.snap
---
source: crates/nuff_python_parser/src/parser/tests.rs
expression: parsed.expr()
---
Name(
    ExprName {
        node_index: NodeIndex(None),
        range: 0..5,
        id: Name("first"),
        ctx: Load,
    },
)
