crates/nuff_python_parser/src/parser/snapshots/nuff_python_parser__parser__tests__fstring_expr_inner_line_continuation_and_t_string.snap
---
source: crates/nuff_python_parser/src/parser/tests.rs
expression: error
---
ParseError {
    error: Lexical(
        LineContinuationError,
    ),
    location: 3..4,
}
