crates/nuff_python_parser/src/parser/snapshots/nuff_python_parser__parser__tests__fstring_expr_inner_line_continuation_newline_t_string.snap
---
source: crates/nuff_python_parser/src/parser/tests.rs
expression: error
---
ParseError {
    error: Lexical(
        TStringError(
            SingleRbrace,
        ),
    ),
    location: 8..9,
}
