crates/nuff_python_parser/src/parser/snapshots/nuff_python_parser__parser__tests__tstring_fstring_middle.snap
---
source: crates/nuff_python_parser/src/parser/tests.rs
expression: error
---
ParseError {
    error: ExpectedExpression,
    location: 3..4,
}
