crates/nuff_python_parser/src/parser/snapshots/nuff_python_parser__parser__tests__tstring_fstring_middle_fuzzer.snap
---
source: crates/nuff_python_parser/src/parser/tests.rs
expression: error
---
ParseError {
    error: Lexical(
        UnrecognizedToken {
            tok: '\0',
        },
    ),
    location: 5..6,
}
