crates/nuff_python_parser/src/parser/snapshots/nuff_python_parser__parser__tests__unicode_aliases.snap
---
source: crates/nuff_python_parser/src/parser/tests.rs
expression: suite
---
[
    Assign(
        StmtAssign {
            node_index: NodeIndex(None),
            range: 0..37,
            targets: [
                Name(
                    ExprName {
                        node_index: NodeIndex(None),
                        range: 0..1,
                        id: Name("x"),
                        ctx: Store,
                    },
                ),
            ],
            value: StringLiteral(
                ExprStringLiteral {
                    node_index: NodeIndex(None),
                    range: 4..37,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 4..37,
                                node_index: NodeIndex(None),
                                value: "\u{8}another cool trick",
                                flags: StringLiteralFlags {
                                    quote_style: Double,
                                    prefix: Empty,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
